gcc/testsuite/rust/rustc/ui/issues/issue-45799-bad-extern-crate-rename-suggestion-formatting.rs
// run-rustfix

extern crate std;
fn main() {}
// { dg-error ".E0259." "" { target *-*-* } .-2 }

